Fix awkward word break on mobile
Closes #50

--- a/src/css/timeline.less
+++ b/src/css/timeline.less
@@ -188,12 +188,13 @@
         .timeline-content {
             .date {
                 right: calc(50% + 20px);
+                font-size: 14px;
             }
 
             .timeline-label {
                 left: calc(50% + 30px);
-                padding: 8px 16px;
-                word-wrap: break-word;
+                padding: 10px;
+                font-size: 11px;
                 max-width: 40%;
             }
 
